--- a/project/style.css
+++ b/project/style.css
@@ -278,8 +278,8 @@ body {
 /* Product Card Container */
 .product-card {
   width: 350px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
+  border: 15px solid #dddddd;
+  border-radius: 5px;
   background-color: #fff;
   text-align: center;
   overflow: hidden;
