--- a/project/style.css
+++ b/project/style.css
@@ -581,3 +581,41 @@ body {
   margin-left: 5px;
 }
 
+
+.pppe{
+  margin-top: 150px;
+}
+
+.logo-wrapper {
+  display: flex;
+  gap: 60px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  padding: 30px;
+  margin-left: 80px;
+ 
+}
+
+.logo-item {
+  width: 150px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff;
+  transition: transform 0.2s;
+  
+  
+}
+
+.logo-item:hover {
+  transform: scale(1.05);
+}
+
+.logo-item img {
+  max-width: 150%;
+  max-height: 60px;
+}
+
