--- a/project/style.css
+++ b/project/style.css
@@ -29,7 +29,7 @@ body {
 
 @media (max-width: 600px) {
     .info-bar {
-        flex-direction: column; /* Stack items vertically on smaller screens */
+        flex-direction: row; /* Stack items vertically on smaller screens */
         align-items: flex-start;
     }
     .info-item {
@@ -97,7 +97,7 @@ body {
 /* Responsive styling for smaller screens */
 @media (max-width: 768px) {
     .navbar {
-        flex-direction: column; /* Stack logo and navigation vertically */
+        flex-direction: row; /* Stack logo and navigation vertically */
         align-items: flex-start; /* Align items to the left */
     }
     .nav-item {
@@ -346,6 +346,7 @@ body {
   justify-content: center;
   flex-wrap: wrap; /* Ensures cards wrap if screen size is small */
   margin: 40px;
+  
 }
 
 /* Product card styling */
@@ -356,6 +357,7 @@ body {
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s, box-shadow 0.3s;
+  
 }
 
 /* Hover effect */
@@ -618,4 +620,53 @@ body {
   max-width: 150%;
   max-height: 60px;
 }
+
+
+/* Footer Styles */
+.footer-container {
+  background-color: #007f70; /* Greenish background color */
+  color: white;
+  display: flex;
+  justify-content: space-between; /* Distribute items evenly with space between */
+  align-items: center;
+  padding: 25px 35px;
+  flex-wrap: wrap; /* Allow wrapping on smaller screens */
+ 
+  
+}
+
+.footer-links {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  line-height: 1;
+}
+
+.footer-links li {
+  margin-bottom: auto;
+}
+
+.footer-links li::before {
+  content: ">> ";
+  color: #fffffe;
+  margin-right: 5px;
+}
+
+.footer-right {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.footer-right img {
+  max-height: 30px;
+}
+
+.footer-copy {
+  font-size: 14px;
+  text-align: center;
+  margin-top: 10px;
+  width: 100%;
+}
+
 
