--- a/project/services.css
+++ b/project/services.css
@@ -25,7 +25,7 @@
   
   .buttons button {
     background-color: gray;
-    color: #fff;
+    color:black;
     border: none;
     border-radius: 4px;
     padding: 10px 15px;
