--- a/project/style.css
+++ b/project/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 0px;
     font-family: Arial, sans-serif;
 }
 
@@ -624,7 +624,7 @@ body {
 
 /* Footer Styles */
 .footer-container {
-  margin: 0;
+  margin: 0px;
   background-color: #007f70; /* Greenish background color */
   color: white;
   display: flex;
