--- a/project/style.css
+++ b/project/style.css
@@ -622,17 +622,20 @@ body {
 }
 
 
-/* Footer Styles */
 .footer-container {
   margin: 0px;
-  background-color: #007f70; /* Greenish background color */
+  background-color: #007f70; 
   color: white;
   display: flex;
-  justify-content: space-between; /* Distribute items evenly with space between */
+  justify-content: space-between; 
   align-items: center;
-  padding: 25px 35px;
-  flex-wrap: wrap; /* Allow wrapping on smaller screens */
-  
+  padding: 15px 25px;
+  flex-wrap: wrap; 
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: auto;
+  overflow-x: hidden;
 }
 
 .footer-links {
@@ -640,41 +643,45 @@ body {
   padding: 0;
   margin: 0;
   line-height: 1;
+  flex: 1;
 }
 
 .footer-links li {
-  margin-bottom: 10px; /* Consistent spacing */
+  margin-bottom: 5px; 
 }
 
 .footer-links li::before {
   content: ">> ";
-  color: #fffffe; /* Icon color */
+  color: #fffffe; 
   margin-right: 5px;
 }
 
-
 .footer-links li:hover {
-  text-decoration: underline; /* Underline on hover */
+  text-decoration: underline; 
 }
 
 .footer-right {
   display: flex;
   align-items: center;
-  gap: 20px; /* Space between items */
-  flex-wrap: wrap; /* Wrap items on smaller screens */
-  margin-right: 100px;
+  justify-content: right;
+  gap: 15px; 
+  flex-wrap: wrap; 
+  margin-left: auto;
+  flex: 1;
 }
 
 .footer-right img {
-  max-height: 50px;
+  max-height: 40px;
+  justify-content: right;
 }
 
 .footer-copy {
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 5px;
   width: 100%;
 }
+
 
 
 
