--- a/project/style.css
+++ b/project/style.css
@@ -613,3 +613,70 @@ width: 100%;
 color: #d1d1d1;
 padding-top: 10px;
 }
+
+
+
+.cookie-consent {
+  position: fixed;
+  bottom: 50px;
+  right: 70px;
+  max-width: 345px;
+  width: 100%;
+  background: #fff;
+  border-radius: 8px;
+  padding: 15px 25px 22px;
+  transition: right 0.3s ease;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.cookie-consent.show {
+  right: 20px;
+}
+
+.cookie-header {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.cookie-header i {
+  color: #007f70;
+  font-size: 32px;
+}
+
+.cookie-header h2 {
+  color: #007f70;
+  font-weight: 500;
+  margin: 0;
+}
+
+.cookie-data {
+  margin-top: 16px;
+}
+
+.cookie-buttons {
+  margin-top: 16px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.cookie-button {
+  border: none;
+  color: #fff;
+  padding: 8px 0;
+  border-radius: 4px;
+  background: #007f70;
+  cursor: pointer;
+  width: calc(100% / 2 - 10px);
+  transition: transform 0.2s ease;
+}
+
+.cookie-button.decline {
+  background: #c4c4c4;
+}
+
+.cookie-button:hover {
+  transform: scale(0.97);
+}
